project/train2/tuning0_1.txt
# Tuning hyper-parameters for accuracy
Best parameters set found on development set:

SVC(C=1000, cache_size=200, class_weight=None, coef0=0.0, degree=3, gamma=0.0,
  kernel=linear, max_iter=-1, probability=False, random_state=None,
  shrinking=True, tol=0.001, verbose=False)

Grid scores on development set:

0.518 (+/-0.000) for {'kernel': 'rbf', 'C': 10, 'gamma': 1}
0.582 (+/-0.002) for {'kernel': 'rbf', 'C': 10, 'gamma': 0.01}
0.518 (+/-0.000) for {'kernel': 'rbf', 'C': 10, 'gamma': 0.1}
0.518 (+/-0.000) for {'kernel': 'rbf', 'C': 100, 'gamma': 1}
0.582 (+/-0.002) for {'kernel': 'rbf', 'C': 100, 'gamma': 0.01}
0.518 (+/-0.000) for {'kernel': 'rbf', 'C': 100, 'gamma': 0.1}
0.518 (+/-0.000) for {'kernel': 'rbf', 'C': 1000, 'gamma': 1}
0.582 (+/-0.002) for {'kernel': 'rbf', 'C': 1000, 'gamma': 0.01}
0.518 (+/-0.000) for {'kernel': 'rbf', 'C': 1000, 'gamma': 0.1}
0.720 (+/-0.003) for {'kernel': 'linear', 'C': 10}
0.719 (+/-0.001) for {'kernel': 'linear', 'C': 100}
0.723 (+/-0.003) for {'kernel': 'linear', 'C': 1000}

Detailed classification report:

The model is trained on the full development set.
The scores are computed on the full evaluation set.

             precision    recall  f1-score   support

       -1.0       0.72      0.71      0.72      3498
        1.0       0.72      0.74      0.73      3620

avg / total       0.72      0.72      0.72      7118


[alanl@f19 ~/Documents/machine_learning/project]$ ./tune-rain-five.py -source train2 -prefix five -index 0
# Tuning hyper-parameters for accuracy
Best parameters set found on development set:

SVC(C=1, cache_size=200, class_weight=None, coef0=0.0, degree=3, gamma=0.0001,
  kernel=rbf, max_iter=-1, probability=False, random_state=None,
  shrinking=True, tol=0.001, verbose=False)

Grid scores on development set:

0.704 (+/-0.007) for {'kernel': 'rbf', 'C': 1, 'gamma': 1e-05}
0.722 (+/-0.004) for {'kernel': 'rbf', 'C': 1, 'gamma': 0.0001}
0.708 (+/-0.006) for {'kernel': 'rbf', 'C': 1, 'gamma': 0.001}
0.569 (+/-0.003) for {'kernel': 'rbf', 'C': 1, 'gamma': 0.01}
0.518 (+/-0.000) for {'kernel': 'rbf', 'C': 1, 'gamma': 0.1}
0.518 (+/-0.000) for {'kernel': 'rbf', 'C': 1, 'gamma': 1}
0.518 (+/-0.000) for {'kernel': 'rbf', 'C': 1, 'gamma': 10}
0.518 (+/-0.000) for {'kernel': 'rbf', 'C': 1, 'gamma': 100}
0.518 (+/-0.000) for {'kernel': 'rbf', 'C': 1, 'gamma': 1000}
0.722 (+/-0.003) for {'kernel': 'linear', 'C': 1}

Detailed classification report:

The model is trained on the full development set.
The scores are computed on the full evaluation set.

             precision    recall  f1-score   support

       -1.0       0.72      0.71      0.71      3498
        1.0       0.72      0.73      0.73      3620

avg / total       0.72      0.72      0.72      7118


[alanl@f19 ~/Documents/machine_learning/project]$ ./tune-rain-five.py -source train2 -prefix five -index 0
# Tuning hyper-parameters for accuracy
Best parameters set found on development set:

SVC(C=1, cache_size=200, class_weight=None, coef0=0.0, degree=3, gamma=0.0001,
  kernel=rbf, max_iter=-1, probability=False, random_state=None,
  shrinking=True, tol=0.001, verbose=False)

Grid scores on development set:

0.518 (+/-0.000) for {'kernel': 'rbf', 'C': 1, 'gamma': 1e-09}
0.518 (+/-0.000) for {'kernel': 'rbf', 'C': 1, 'gamma': 1e-08}
0.615 (+/-0.002) for {'kernel': 'rbf', 'C': 1, 'gamma': 1e-07}
0.655 (+/-0.008) for {'kernel': 'rbf', 'C': 1, 'gamma': 1e-06}
0.704 (+/-0.007) for {'kernel': 'rbf', 'C': 1, 'gamma': 1e-05}
0.722 (+/-0.004) for {'kernel': 'rbf', 'C': 1, 'gamma': 0.0001}
0.708 (+/-0.006) for {'kernel': 'rbf', 'C': 1, 'gamma': 0.001}
0.569 (+/-0.003) for {'kernel': 'rbf', 'C': 1, 'gamma': 0.01}
0.518 (+/-0.000) for {'kernel': 'rbf', 'C': 1, 'gamma': 0.1}
0.722 (+/-0.003) for {'kernel': 'linear', 'C': 1}

Detailed classification report:

The model is trained on the full development set.
The scores are computed on the full evaluation set.

             precision    recall  f1-score   support

       -1.0       0.72      0.71      0.71      3498
        1.0       0.72      0.73      0.73      3620

avg / total       0.72      0.72      0.72      7118


[alanl@f19 ~/Documents/machine_learning/project]$ ./tune-rain-five.py -source train2 -prefix five -index 0
  File "./tune-rain-five.py", line 38
    C=[1, 1.0e2, 1.0e3, 1.0e4, 1.0e5, 1.0e6]]
                                            ^
SyntaxError: invalid syntax
[alanl@f19 ~/Documents/machine_learning/project]$ ./tune-rain-five.py -source train2 -prefix five -index 0
# Tuning hyper-parameters for accuracy
^C


^C^C^C^C^C
^C
^C
^C
^C
^C
^C
^C
^C
^C^C
Terminated
[alanl@f19 ~/Documents/machine_learning/project]$ 
[alanl@f19 ~/Documents/machine_learning/project]$ ./tune-rain-five.py -source train2 -prefix five -index 0
# Tuning hyper-parameters for accuracy
Best parameters set found on development set:

SVC(C=1000.0, cache_size=200, class_weight=None, coef0=0.0, degree=3,
  gamma=1e-05, kernel=rbf, max_iter=-1, probability=False,
  random_state=None, shrinking=True, tol=0.001, verbose=False)

Grid scores on development set:

0.704 (+/-0.007) for {'kernel': 'rbf', 'C': 1, 'gamma': 1e-05}
0.722 (+/-0.004) for {'kernel': 'rbf', 'C': 1, 'gamma': 0.0001}
0.708 (+/-0.006) for {'kernel': 'rbf', 'C': 1, 'gamma': 0.001}
0.729 (+/-0.003) for {'kernel': 'rbf', 'C': 100.0, 'gamma': 1e-05}
0.713 (+/-0.007) for {'kernel': 'rbf', 'C': 100.0, 'gamma': 0.0001}
0.658 (+/-0.009) for {'kernel': 'rbf', 'C': 100.0, 'gamma': 0.001}
0.732 (+/-0.005) for {'kernel': 'rbf', 'C': 1000.0, 'gamma': 1e-05}
0.668 (+/-0.005) for {'kernel': 'rbf', 'C': 1000.0, 'gamma': 0.0001}
0.659 (+/-0.008) for {'kernel': 'rbf', 'C': 1000.0, 'gamma': 0.001}
0.722 (+/-0.003) for {'kernel': 'linear', 'C': 1}
0.719 (+/-0.001) for {'kernel': 'linear', 'C': 100.0}
0.723 (+/-0.003) for {'kernel': 'linear', 'C': 1000.0}

Detailed classification report:

The model is trained on the full development set.
The scores are computed on the full evaluation set.

             precision    recall  f1-score   support

       -1.0       0.72      0.71      0.72      3498
        1.0       0.73      0.73      0.73      3620

avg / total       0.72      0.72      0.72      7118


[alanl@f19 ~/Documents/machine_learning/project]$ ./tune-rain-five.py -source train2 -prefix five -index 0
# Tuning hyper-parameters for accuracy
Best parameters set found on development set:

SVC(C=100000.0, cache_size=200, class_weight=None, coef0=0.0, degree=3,
  gamma=1e-06, kernel=rbf, max_iter=-1, probability=False,
  random_state=None, shrinking=True, tol=0.001, verbose=False)

Grid scores on development set:

0.668 (+/-0.005) for {'kernel': 'rbf', 'C': 1000.0, 'gamma': 0.0001}
0.732 (+/-0.005) for {'kernel': 'rbf', 'C': 1000.0, 'gamma': 1e-05}
0.720 (+/-0.006) for {'kernel': 'rbf', 'C': 1000.0, 'gamma': 1e-06}
0.636 (+/-0.004) for {'kernel': 'rbf', 'C': 10000.0, 'gamma': 0.0001}
0.719 (+/-0.003) for {'kernel': 'rbf', 'C': 10000.0, 'gamma': 1e-05}
0.711 (+/-0.005) for {'kernel': 'rbf', 'C': 10000.0, 'gamma': 1e-06}
0.630 (+/-0.004) for {'kernel': 'rbf', 'C': 100000.0, 'gamma': 0.0001}
0.695 (+/-0.004) for {'kernel': 'rbf', 'C': 100000.0, 'gamma': 1e-05}
0.732 (+/-0.005) for {'kernel': 'rbf', 'C': 100000.0, 'gamma': 1e-06}
0.723 (+/-0.003) for {'kernel': 'linear', 'C': 1000.0}
0.723 (+/-0.003) for {'kernel': 'linear', 'C': 10000.0}
0.723 (+/-0.002) for {'kernel': 'linear', 'C': 100000.0}

Detailed classification report:

The model is trained on the full development set.
The scores are computed on the full evaluation set.

             precision    recall  f1-score   support

       -1.0       0.73      0.72      0.72      3498
        1.0       0.73      0.74      0.73      3620

avg / total       0.73      0.73      0.73      7118
[alanl@f19 ~/Documents/machine_learning/project]$ ./tune-rain-five.py -source train2 -prefix five -index 0
# Tuning hyper-parameters for accuracy
Best parameters set found on development set:

SVC(C=100000.0, cache_size=200, class_weight=None, coef0=0.0, degree=3,
  gamma=1e-06, kernel=rbf, max_iter=-1, probability=False,
  random_state=None, shrinking=True, tol=0.001, verbose=False)

Grid scores on development set:

0.732 (+/-0.005) for {'kernel': 'rbf', 'C': 100000.0, 'gamma': 1e-06}
0.711 (+/-0.005) for {'kernel': 'rbf', 'C': 100000.0, 'gamma': 1e-07}
0.716 (+/-0.005) for {'kernel': 'rbf', 'C': 100000.0, 'gamma': 1e-08}
0.723 (+/-0.002) for {'kernel': 'linear', 'C': 100000.0}

Detailed classification report:

The model is trained on the full development set.
The scores are computed on the full evaluation set.

             precision    recall  f1-score   support

       -1.0       0.73      0.72      0.72      3498
        1.0       0.73      0.74      0.73      3620

avg / total       0.73      0.73      0.73      7118


[alanl@f19 ~/Documents/machine_learning/project]$ 

